# sixthwheel

./: batterytransport.py  car.urdf  financial model.ipynb  financials.py  flywheel.py  gearratiocheck.py  gui.py  model.py  pyproject.toml  simulation.py  solarcharger.py
.ipynb_checkpoints/: financial model-checkpoint.ipynb
