[tool.poetry]
name = "sixthwheel"
version = "0.1.0"
description = ""
authors = ["Ian Rust <iancrust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Pint = "^0.16.1"
pybullet = "^3.0.6"
Panda3D = "^1.10.7"
numpy = "^1.19.4"
notebook = "^6.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
